--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,3 +1,9 @@
 h1{color:darkblue}
-button{border-style: solid;}
+button{border-style: solid;
+    border-style: inset;
+    border-color: orange;
+    margin: 5px;
+    
+  font-size: 20px;
+  font-family: Tangerine;}
 body{background-color: orange}
