--- a/indexstyle.css
+++ b/indexstyle.css
@@ -3,7 +3,7 @@ button{border-style: solid;
     border-style: inset;
     border-color: orange;
     margin: 5px;
-    
+
   font-size: 20px;
   font-family: Tangerine;}
-body{background-color: orange}
+body{background-color:yellow}
